--- a/chips-webapp/src/Components/Auth/s.css
+++ b/chips-webapp/src/Components/Auth/s.css
@@ -1,132 +1,42 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-#wrapper {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-}
-
-#box {
-  width: 320px;
-  height: auto;
-  margin: 0 auto;
-  background: #fff;
-  border: thin solid #ededed;
-}
-
-#box > img {
-  width: 16px;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-  padding: 30px 0 20px 0;
-}
-
-#box > h3 {
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 0.9em;
-  color: #666;
-  margin: 0 0 35px 0;
-}
-
-#box > form {
-  width: 100%;
-  height: auo;
-  margin: 0 auto;
+.login-container {
+  width:100%;
+  align-items: center;
   text-align: center;
 }
 
-#box > form > input {
-  display: inline-block;
-  width: 260px;
-  height: 50px;
-  margin: 5px auto;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 0.8em;
-  border: 1.5px solid #cccccc;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
+.login-container form {
+  min-height:400px;
 }
 
-#box > form > input:focus {
-  border: thin solid #015b7e;
-  outline: none;
+.login-header{
+  font-size: 40px;
 }
 
-::-webkit-input-placeholder {
-  color: #ccc;
-  font-weight: 700;
-  font-size: 0.9em;
+.fields{
+  margin-bottom: 30px;
+  width:272px;
+  height:50px;
+  border-radius: 30px;
+  padding: 10px 20px;
+  transition: 0.5s;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#box > a {
-  display: block;
-  margin: 0;
-  padding: 5px 0 15px 0;
-  width: 260px;
-  height: 20px;
-  margin: 0 auto;
-  text-align: right;
-  text-transform: uppercase;
-  font-size: 0.7em;
-  color: #ccc;
-  font-weight: 400;
+.fields:focus{
+  outline:none;
+  box-shadow: 0px 3px 6px #494949;
 }
 
-#box > input {
-  width: 260px;
-  height: 50px;
-  background: #015b7e;
-  border: none;
-  outline: none;
-  margin: 0 auto;
-  display: block;
-  color: #fff;
-  text-transform: uppercase;
-  text-align: center;
+.submit{
+  width:272px;
+  height:50px;
+  border:none;
+  background-color: #494949;
+  color:white;
+  box-shadow: 0px 3px 6px #494949;
   margin-bottom: 20px;
-  border-radius: 3px;
-  cursor: pointer;
-  font-weight: 700;
-  font-size: 0.7em;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
 }
 
-#box > input:hover {
-  background: #014965;
-}
-
-#box > .signup {
-  width: 100%;
-  height: auto;
-  border: none;
-  background: #f5f5f5;
-  outline: none;
-  margin: 0 auto;
-  padding: 20px;
-  display: block;
-  color: #666;
-  text-transform: uppercase;
-  text-align: center;
-  box-sizing: border-box;
-  font-size: 0.8em;
-}
-
-#box > .signup p, a {
-  font-size: 0.8em;
-  text-decoration: none;
-}
-
-#box > .signup p {
-  color: #ccc;
-}
-
-#box > .signup a {
-  text-decoration: none;
-  color: #015b7e;
-  font-size: 1em;
-  padding-left: 25px;
+.signup{
+  margin-top:20px;
 }
